--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,21 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.920
+head: 1.921
 branch:
 locks: strict
-	gilles: 1.920
+	gilles: 1.921
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 920;	selected revisions: 920
+total revisions: 921;	selected revisions: 921
 description:
 ----------------------------
-revision 1.920	locked by: gilles;
+revision 1.921	locked by: gilles;
+date: 2019/02/18 10:21:03;  author: gilles;  state: Exp;  lines: +10 -8
+Bugfix. Errors of APPEND were not counted as missing messages on host2!
+----------------------------
+revision 1.920
 date: 2019/02/09 15:45:31;  author: gilles;  state: Exp;  lines: +37 -33
 Better "Extra arguments found" error message, added "or some misspelling options"
 ----------------------------
