--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: TODO,v 1.257 2021/07/05 20:19:31 gilles Exp gilles $
+# $Id: TODO,v 1.262 2022/01/11 12:56:18 gilles Exp gilles $
 
 This documentation is also at http://imapsync.lamiral.info/#doc
 
@@ -9,6 +9,17 @@ TODO file for imapsync
 
 https://imapsync.lamiral.info/TODO
 
+SUGGESTED 2022_01_09 by Neustradamus
+Add SCRAM-SHA* support
+https://github.com/imapsync/imapsync/issues/313
+
+SUGGESTED 2021_06_13 by rotemes 
+https://github.com/imapsync/imapsync/issues/288
+Add a counter for skipped because of already copied and 
+because of other things.
+What ENVELOPE could bring?
+( 'FLAGS', 'INTERNALDATE', 'RFC822.SIZE' ) ;
+( 'FLAGS', 'INTERNALDATE', 'RFC822.SIZE' , 'ENVELOPE' )
 
 SUGGESTED 2021_05_29 on github https://github.com/imapsync/imapsync/issues/78
 ripmime   https://github.com/inflex/ripMIME
@@ -695,6 +706,15 @@ http://asg.web.cmu.edu/cyrus/download/imapd/altnamespace.html
 ===========================================================================
 Now the TODO done! (or not)
 ===========================================================================
+
+DONE  revision 2.169 date: 2021/12/07 17:13:44; 
+Added --keepalive1 and --keepalive2 options. On by default.
+See https://metacpan.org/pod/Mail::IMAPClient#Keepalive
+  
+DONE revision 2.159 date: 2021/11/19 14:29:31
+SUGGESTED 2021_11_18 by Justas Umbrasas
+Add COMPRESS to imap connexions
+--compress1 --compress2
 
 DONE 2021/04/30 revision 2.111 by Gilles
 SUGGESTED 2021_04_22 by popular request
