--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: TODO,v 1.262 2022/01/11 12:56:18 gilles Exp gilles $
+# $Id: TODO,v 1.265 2022/02/22 15:16:48 gilles Exp gilles $
 
 This documentation is also at http://imapsync.lamiral.info/#doc
 
@@ -9,9 +9,23 @@ TODO file for imapsync
 
 https://imapsync.lamiral.info/TODO
 
+
+SUGGESTED 2022_02_19
+Talk about size discrepencies. 
+Gmail doesn't count duplicates sizes twice.
+Servers reported message sizes are always not the actual messages sizes.
+Where put that information?
+
+SUGGESTED 2022_01_26 by Kuch/Mitchell/D.
+Make --delete1 be optionally "Move to Trash folder"
+Use MOVE if possible 
+https://datatracker.ietf.org/doc/html/rfc6851
+
 SUGGESTED 2022_01_09 by Neustradamus
 Add SCRAM-SHA* support
 https://github.com/imapsync/imapsync/issues/313
+https://perldoc.perl.org/Digest::SHA
+
 
 SUGGESTED 2021_06_13 by rotemes 
 https://github.com/imapsync/imapsync/issues/288
@@ -530,7 +544,7 @@ Write a Windows tutorial, TUTORIAL_Windows.html.
 
 Write a good practices migration tips document, GOOD_PRACTICES.html
 
-Add uidexpunge with --delete if possible (like with --delete2).
+Add uidexpunge with --delete1 if possible (like with --delete2).
 
 Add the possibility to specify a unity with --maxsize and --minsize
 Example --maxsize 10MB --minsize 10KB
