Fixed another typo

--- a/README
+++ b/README
@@ -290,7 +290,7 @@ OPTIONS
 
      --subfolder1   str  : Syncs the host1 folders hierarchy which is under folder
                            str to the root hierarchy of host2.
-                           It's the couterpart of a sync done by --subfolder2
+                           It's the counterpart of a sync done by --subfolder2
                            when doing it in the reverse order.
                            Backup/Restore scenario:
                            Use --subfolder2 str for a backup to the folder str
