--- a/README
+++ b/README
@@ -891,6 +891,7 @@ SIMILAR SOFTWARE
      BitRecover email-backup 99 USD, 299 USD https://www.bitrecover.com/email-backup/.
      ImportExportTools: https://addons.thunderbird.net/en-us/thunderbird/addon/importexporttools/ ImportExportTools for Mozilla Thunderbird by Paolo Kaosmos. ImportExportTools does not do IMAP.
      rximapmail: https://sourceforge.net/projects/rximapmail/
+     Shoviv: https://www.shoviv.com/email-backup.html Allows backup from various sources including Office 365 (Exchange Online, Exchange On-Premises), IMAP, and Google Workspace.
      CodeTwo: https://www.codetwo.com/ but CodeTwo does imap source to Office365 only.
 
 HISTORY
